# track_world_venv

./: .gitignore  CLAUDE.md
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/config/: rviz2.rviz
src/robot_sim/env-hooks/: robot_sim_gazebo_model_path.sh.in
src/robot_sim/launch/: sim.launch.py  track.launch.py
src/robot_sim/models/track_arc_90/: model.config  model.sdf
src/robot_sim/models/track_cross_intersection/: model.config  model.sdf
src/robot_sim/models/track_straight_0_5m/: model.config  model.sdf
src/robot_sim/models/track_straight_1m/: model.config  model.sdf
src/robot_sim/models/track_t_intersection/: model.config  model.sdf
src/robot_sim/models/traffic_cone/: model.config  model.sdf
src/robot_sim/scripts/: generate_track.py
src/robot_sim/urdf/: limo_sim.urdf.xacro
src/robot_sim/worlds/: basic_world.world  track_world.world
